--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="javascript:;" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=IrdvcaKHUi1mKCHgklwKta9KFvlvQjmb"></script> -->
-    <title>my Vite Vue3 App</title>
+    <title>my Vue3 App</title>
   </head>
   <body>
     <div id="app"></div>
